--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,10 @@ html,body{
     margin: 0;
 }
 #navbar{
-    height: 100px;
     width: 100%;
+    aspect-ratio: 19/1;
     background-image: url("../images/bg.png");
-    background-size: 101%;
-    background-position-x: -10px;
     background-position-y: 70%;
-    background-color: #000000;
     position: sticky;
     display: flex;
     flex-direction: row;
@@ -22,13 +19,12 @@ html,body{
     top: 0;
 }
 #navleft{
-    gap: 50px;
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    user-select: none;
 }
 #navleft>a{
     height: 100%;
@@ -42,17 +38,15 @@ html,body{
     filter: opacity(50%);
     transition: filter 0.5s ease;
 }
-#logo:hover{
-    filter: opacity(100%);
-}
-#navleft>#controllerLogo{
+#controllerLogo{
     height: 1.6vw;
     width: 2.5vw;
     cursor: pointer;
+    user-select: none;
     filter: opacity(50%);
     transition: filter 0.2s ease;
 }
-#navleft>#controllerLogo:hover{
+#logo:hover ,#controllerLogo:hover{
     filter: opacity(100%);
 }
 #navright{
@@ -64,15 +58,10 @@ html,body{
     font-family: Cinzel;
 }
 
-#main{
-    background-color: #333333;
-    width: 100%;
-    height: 100%;
-}
+
 
 
 .button {
-    
     color:rgba(70, 70, 70, 1);
     text-decoration: none;
     font-family: cinzelregular;
@@ -81,16 +70,12 @@ html,body{
     display: inline-block;
     transition: color ease 0.5s;
     font-size: 1vw;
-    width: 250px;
+    width: 13vw;
 	--x: 0;
 	--y: 50px;
-	position: relative;
-	appearance: none;
 	padding: 0.8em 2em;
 	cursor: pointer;
-	outline: none;
 	border-radius: 20px 20px 20px 100px;
-	
 	border: 2px solid transparent;
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), #998200, #000000) border-box;
 }
@@ -103,4 +88,23 @@ html,body{
          url('../fonts/cinzel/cinzel-variablefont_wght-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
+#main{
+    background-color: #333333;
+    width: 100%;
+    height: 100%;
+}
+footer{
+    background-color: #191919;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #555555;
+    
+}
+footer img{
+    width: 40px;
 }
