--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,11 @@ html,body{
     padding: 0;
     margin: 0;
 }
-#navbar{
+header{
+    z-index: 100;
     width: 100%;
     aspect-ratio: 19/1;
-    background-image: url("../images/bg.png");
+    background-image: url("../images/headerbg.png");
     background-position-y: 70%;
     position: sticky;
     display: flex;
@@ -18,7 +19,7 @@ html,body{
     padding: 10px;
     top: 0;
 }
-#navleft{
+#headerLeft{
     width: 50%;
     height: 100%;
     display: flex;
@@ -26,7 +27,7 @@ html,body{
     align-items: center;
     user-select: none;
 }
-#navleft>a{
+#headerLeft>a{
     height: 100%;
     display: flex;
     align-items: center;
@@ -49,7 +50,7 @@ html,body{
 #logo:hover ,#controllerLogo:hover{
     filter: opacity(100%);
 }
-#navright{
+nav{
     width: 50%;
     display: flex;
     flex-direction: row;
@@ -89,22 +90,39 @@ html,body{
     font-weight: normal;
     font-style: normal;
 }
-#main{
-    background-color: #333333;
-    width: 100%;
-    height: 100%;
-}
+
 footer{
+    position: fixed;
+    bottom: 0;
     background-color: #191919;
     width: 100%;
-    height: 50px;
+    aspect-ratio: 30/1;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: #555555;
-    
+    color: #777777;
+    font-size: 1vw;
+}
+footer a{
+    display: flex;
+    align-items: center;
 }
 footer img{
-    width: 40px;
+    width: 2vw;
+}
+#middle{
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/background.png");
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
+#main{
+    height: 100%;
+    width: 66%;
+    margin: auto;
+    padding: 20px;
+    background-color: rgba(51, 51, 51,0.9);
 }
