--- a/css/banner.css
+++ b/css/banner.css
@@ -2,56 +2,47 @@
 #banner{
     /* border: 1px solid red; */
     width: 100%;
-    aspect-ratio: 3/1;
+    aspect-ratio: 3.5/1;
     overflow: hidden;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    user-select: none;
 }
 #bannerleft, #bannerright{
-    font-size: 30px;
-    color: white;
     z-index: 999;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    background-color: rgba(0,0,0,0.6);
+    width: 30%;
+    height: 100%;
     cursor: pointer;
-    user-select: none;
 }
 #banner>img{
     position: absolute;
     width: 100%;
-    aspect-ratio: 3/1;
+    aspect-ratio: 3.5/1;
 }
 .animated{
     transition: 0.5s ease;
 }
 #pager{
     position: relative;
-    top: -3%;
+    top: -0.7vw;
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 4px;
 }
 .pager-button{
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10px;
-    background-color: #aaa;
-    border: 1px solid black;
+    background-color: #444444;
     cursor: pointer;
     user-select: none;
 }
 .pager-button-active{
-    background-color: dodgerblue;
+    background-color: #aaa;
 }
