--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ nav{
 	cursor: pointer;
 	border-radius: 20px 20px 20px 100px;
 	border: 2px solid transparent;
-	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), #998200, #000000) border-box;
+	background: linear-gradient(#151515, #151515) padding-box, border-box radial-gradient(farthest-corner at var(--x) var(--y), #998200, #000000);
 }
 .button:hover{
     color:rgba(150, 150, 150, 1);
