--- a/css/soulslike.css
+++ b/css/soulslike.css
@@ -1,3 +1,31 @@
 #SoulslikePage{
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
+#main{
+	padding: 5%;
+	color: white;
+}
+h1{
+	text-align: center;
+}
+p{
+	text-align: justify;
+}
+article>div{
+	display: flex;
+	gap: 10%;
+}
+article>div>img{
+	width: 40%;
+}
+table{
+	border: 2px solid white;
+	margin: auto;
+	width: 60%;
+}
+th,td{
+	border: 2px solid white;
+
+	padding-left: 2%;
+	padding-right: 2%;
+}
