--- a/css/games.css
+++ b/css/games.css
@@ -1,3 +1,86 @@
 #GamesPage{
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
+#main{
+	padding: 5%;
+	color: white;
+	text-align: justify;
+}
+p,h2{
+	margin: 0 10%;
+}
+h1{
+	text-align: center;
+}
+#kingsfield{
+	margin-top: 10vh;
+	display: flex;
+}
+#kingsfield > div{
+	margin-left: 10%;
+}
+#kingsfield p,#kingsfield h2,#demonssoul p{
+	margin: 0;
+}
+#kingsfield img{
+	width: 35%;
+	aspect-ratio: 1/1;
+	padding: 5%;
+	margin: 0 10%;
+	border-left: white solid 2px;
+	border-bottom: white solid 2px;
+}
+#demonssoul{
+	margin-top: 10vh;
+	margin-bottom: 10vh;
+	display: flex;
+}
+#demonssoul > div{
+	margin-right: 10%;
+}
+#demonssoul>img{
+	width: 35%;
+	aspect-ratio: 1/1;
+	padding: 5%;
+	margin: 0 10%;
+	border-right: white solid 2px;
+	border-top: white solid 2px;
+}
+#darksouls>img{
+	width: 40%;
+	float: left;
+	margin: 1% 1% 1% 10%;
+}
+
+#darksouls{
+	margin: 10vh 0;
+}
+#bloodborneimage1{
+	float: left;
+	margin: 1% 1% 1% 10%;
+	width: 30%;
+}
+#bloodborneimage2{
+	margin: 1% 10% 1% 1%;
+	float: right;
+	width: 30%;
+}
+#bloodborne{
+	margin: 10vh 0;
+}
+#sekiro > img{
+	margin: 1% 1% 1% 10%;
+	width: 30%;
+	float: left;
+}
+#sekiro p{
+	margin-top: 2vh;
+}
+#sekiro{
+	margin: 10vh 0;
+}
+#eldenring>img{
+	width: 15%;
+	float: right;
+	margin: 1% 10% 1% 1%;
+}
