--- a/css/company.css
+++ b/css/company.css
@@ -1,3 +1,24 @@
 #CompanyPage{
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
+#main{
+	padding: 5%;
+	color: white;
+}
+#company > img{
+	width: 40%;
+	float: right;
+	margin: 0 5% 5% 5%;
+}
+#company > iframe {
+	margin:5%;
+	margin-top: 2vh;
+	width: 40%;
+	aspect-ratio: 16/9;
+	float: left;
+}
+#hidetaka > img{
+	margin:0 5%;
+	float: left;
+	width: 20%;
+}
