--- a/css/games.css
+++ b/css/games.css
@@ -9,9 +9,6 @@
 p,h2{
 	margin: 0 10%;
 }
-h1{
-	text-align: center;
-}
 #kingsfield{
 	margin-top: 10vh;
 	display: flex;
@@ -45,6 +42,9 @@ h1{
 	margin: 0 10%;
 	border-right: white solid 2px;
 	border-top: white solid 2px;
+}
+#demonssoul h2{
+	margin: 0;
 }
 #darksouls>img{
 	width: 40%;
@@ -83,4 +83,7 @@ h1{
 	width: 15%;
 	float: right;
 	margin: 1% 10% 1% 1%;
+}
+#eldenring{
+	margin: 10vh 0;
 }
