--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,28 @@ footer img{
     
     background-color: rgba(51, 51, 51,0.9);
 }
+.contentSlicer{
+    width: 100%;
+    display: flex;
+    justify-content: left;
+}
+.firstHr{
+    margin-right: 0;
+    height: 0.2vh;
+    width: 50%;
+    background: linear-gradient(to left, #998200, #333333);
+    border: none;
+}
+.secondHr{
+    margin-left: 0;
+    width: 50%;
+    background: linear-gradient(to right, #998200, #333333);
+    height: 0.2vh;
+    border: none;
+}
+.smallerHr{
+    width: 30%;
+}
+h1{
+    text-align: center;
+}
