--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ html,body{
     padding: 0;
     margin: 0;
 }
+
 header{
     z-index: 100;
     width: 100%;
@@ -148,4 +149,48 @@ footer img{
 }
 h1{
     text-align: center;
+}
+/*modal*/
+#modal{
+    visibility: hidden;
+    z-index: 999;
+    position:fixed;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#modalPanel{
+    position: relative;
+    color: white;
+    background-color: #333333;
+    width: 20%;
+    height: 50%;
+}
+#modalPanel>h3{
+    text-align: center;
+    font-size: 3vh;
+}
+#modalCheckbox{
+    line-height: 5vh;
+    font-size: 2.5vh;
+    margin-left:10%;
+    display: flex;
+    flex-direction: column;
+}
+#modalCheckbox input{
+    width: 20px;
+    height: 20px;
+}
+#modalClose{
+    font-size: 2vh;
+    cursor: pointer;
+    user-select: none;
+    font-family: Arial;
+    position: absolute;
+    top: 5px;
+    right:5px;
 }
