--- a/css/company.css
+++ b/css/company.css
@@ -5,6 +5,16 @@
 #CompanyPage{
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
+h1{
+	font-size: 2vw;
+}
+h2{
+	
+	font-size: 1.5vw;
+}
+p{
+	font-size: 0.8vw;
+}
 #main{
 	padding: 5%;
 	color: white;
