--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 #trailer{
     padding: 5%;
     color: white;
-    line-height: 1em;
+    line-height: 2vh;
     display: flex;
     flex-direction: row;
     gap: 10%;
@@ -22,17 +22,18 @@
     font-family: metamorphousregular;
 }
 #trailerDescription>p{
-    margin: auto 1vw 1vh 1vw;
+    margin: auto 1vw 1vw 1vw;
     width: 90%;
-    font-size: 0.8em;
+
+    font-size: 0.8vw;
 }
 #trailertrailer{
     font-family: sans-serif;
-    font-size: 0.7em;
+    font-size: 0.8vw;
 }
 #YouTube{
     float: right;
-    width: 50%;
+    width: 50%; 
     aspect-ratio: 16/9;
     border: none;
 }
@@ -43,12 +44,14 @@
     display: flex;
     justify-content: center;
     gap: 2%;
+    font-size: 1vw;
 }
 #inputs{
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    height: 30vh;
 }
 #inputName::placeholder{
     color: red;
@@ -65,9 +68,12 @@
     flex-direction: column;
     justify-content: center;
     gap: 0.6vh;
+    line-height: 1vh;
 }
 
 #formTitle{
+    
+    font-size: 1.5vw;
     font-weight: normal;
     font-family: metamorphousregular;
     text-align: center;
