--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,19 @@ html,body{
     height: 100%;
     padding: 0;
     margin: 0;
+    height: auto;
 }
-
 header{
     z-index: 100;
     width: 100%;
     aspect-ratio: 19/1;
     background-image: url("../images/headerbg.png");
     background-position-y: 70%;
+    background-size: cover;
     position: sticky;
     display: flex;
     flex-direction: row;
-    padding: 10px;
+    padding: 0.5vw;
     top: 0;
 }
 #headerLeft{
@@ -81,8 +82,8 @@ nav{
 	
 	padding: 0.8em 2em;
 	cursor: pointer;
-	border-radius: 20px 20px 20px 100px;
-	border: 2px solid transparent;
+	border-radius: 1vw 1vw 1vw 5vw;
+	border: 0.2vw solid transparent;
 	/*background: linear-gradient(#151515, #151515) padding-box, border-box radial-gradient(farthest-corner at var(--x) var(--y), #998200, #000000);*/
     background: linear-gradient(#151515, #151515) padding-box, 
             border-box radial-gradient(farthest-corner at var(--x) var(--y), #998200, #000000);
@@ -123,9 +124,9 @@ footer img{
     background-image: url("../images/background.png");
     background-size: cover;
     background-attachment: fixed;
-    
 }
 #main{
+    
     height: 100%;
     width: 66%;
     margin: auto;
@@ -189,8 +190,8 @@ h1{
     flex-direction: column;
 }
 #modalCheckbox input{
-    width: 20px;
-    height: 20px;
+    width: 1vw;
+    height: 1vw;
 }
 #modalClose{
     font-size: 2vh;
@@ -198,6 +199,6 @@ h1{
     user-select: none;
     font-family: Arial;
     position: absolute;
-    top: 5px;
-    right:5px;
+    top: 0.25vw;
+    right:0.25vw;
 }
