--- a/css/company.css
+++ b/css/company.css
@@ -6,33 +6,73 @@
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
 h1{
-	font-size: 2vw;
+	width: 66%;
+    margin: auto;
+	background-image: url('../images/titlebackground.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	line-height: 20vh;
+	font-size: 3.5vw;
+	font-family: cinzelregular;
+	color: white;
 }
 h2{
 	
 	font-size: 1.5vw;
 }
 p{
-	font-size: 0.8vw;
+	font-size: 0.75vw;
+	font-family: sans-serif;
 }
+
 #main{
-	padding: 5%;
-	color: white;
+	text-align: justify;
+    padding: 2% 5% 5% 5%;
 }
-#company > img{
+#hq{
 	width: 40%;
 	float: right;
 	margin: 0 5% 5% 5%;
 }
 #company > iframe {
-	margin:5%;
-	margin-top: 2vh;
+	margin:8% 5% 0 5%;
 	width: 40%;
 	aspect-ratio: 16/9;
 	float: left;
 }
-#hidetaka > img{
+#hidetaka{
+	margin-top: 10%;
+}
+#hidetaka  img{
 	margin:0 5%;
 	float: left;
 	width: 20%;
+}
+
+@media only screen and (max-width: 768px) {
+	#hq{
+		float: left;
+		margin: 0 2%;
+	}
+	#valami{
+		margin-bottom: 10%;
+	}
+	#company > iframe{
+		margin: 0 2%;
+		padding: 0;
+	}
+	#company > p:last-child{
+		margin-bottom: 10%;
+	}
+}
+@media only screen and (max-width: 576px) {
+	#company img,#company iframe,#hidetaka img{
+		width: 100%;
+		margin: 2% 0;
+	}
+	#main *{
+		font-size: 3vw;
+	}
+
+
 }
