--- a/css/games.css
+++ b/css/games.css
@@ -3,25 +3,32 @@
 	--y: 50px;
 }
 #GamesPage{
+	
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
 #main{
-	padding: 5%;
-	color: white;
 	text-align: justify;
+    padding: 5%;
 }
-
 h1{
-	font-size: 2vw;
+	width: 66%;
+    margin: auto;
+	background-image: url('../images/titlebackground.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	line-height: 20vh;
+	font-size: 3.5vw;
+	font-family: cinzelregular;
+	color: white;
 }
 h2{
-	
+	margin: 2vh 10% ;
 	font-size: 1.5vw;
-	margin: 0 10%;
 }
 p{
-	font-size: 0.8vw;
+	font-size: 0.75vw;
 	margin: 0 10%;
+	font-family: sans-serif;
 }
 #kingsfield{
 	margin-top: 10vh;
@@ -31,39 +38,54 @@ p{
 	margin-left: 10%;
 }
 #kingsfield p,#kingsfield h2,#demonssoul p{
-	margin: 0;
+	margin: 0 0 0 0 ;
+}
+#kingsfield h2{
+	padding-top: 5%;
+}
+a{
+	color: #c9c942;
+}
+a:visited{
+	color: #f57b42;
 }
 #kingsfield img{
-	width: 35%;
-	aspect-ratio: 1/1;
+	align-self: center;
+	width: 39%;
+	height: auto;
 	padding: 5%;
-	margin: 0 10%;
+	margin: 0 10% 0 5%;
 	border-left: white solid 0.2vw;
 	border-bottom: white solid 0.2vw;
 }
 #demonssoul{
-	margin-top: 10vh;
-	margin-bottom: 10vh;
+	margin: 2% 0 10vh 0;
 	display: flex;
 }
 #demonssoul > div{
 	margin-right: 10%;
 }
 #demonssoul>img{
-	width: 35%;
-	aspect-ratio: 1/1;
+	width: 39%;
+	height: auto;
+	
+	align-self: center;
 	padding: 5%;
-	margin: 0 10%;
+	margin: 0 5% 0 10%;
 	border-right: white solid 0.2vw;
 	border-top: white solid  0.2vw;
 }
-#demonssoul h2{
-	margin: 0;
+#demonssoul h2, #kingsfield h2{
+	margin: 0 0 5% 0;
 }
 #darksouls>img{
 	width: 40%;
 	float: left;
-	margin: 1% 1% 1% 10%;
+	margin: 2.74% 2% 0% 10%;
+}
+#darksouls>a,#bloodborne>a,#eldenring>a{
+	
+	margin-left: 10%;
 }
 
 #darksouls{
@@ -71,11 +93,11 @@ p{
 }
 #bloodborneimage1{
 	float: left;
-	margin: 1% 1% 1% 10%;
+	margin: 2% 2% 1% 10%;
 	width: 30%;
 }
 #bloodborneimage2{
-	margin: 1% 10% 1% 1%;
+	margin: 0% 10% 2% 2%;
 	float: right;
 	width: 30%;
 }
@@ -83,7 +105,7 @@ p{
 	margin: 10vh 0;
 }
 #sekiro > img{
-	margin: 1% 1% 1% 10%;
+	margin: 2% 2% 2% 10%;
 	width: 30%;
 	float: left;
 }
@@ -96,7 +118,7 @@ p{
 #eldenring>img{
 	width: 15%;
 	float: right;
-	margin: 1% 10% 1% 1%;
+	margin: -2% 10% 2% 2%;
 }
 #eldenring{
 	margin: 10vh 0;
