--- a/css/soulslike.css
+++ b/css/soulslike.css
@@ -6,44 +6,55 @@
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
 #main{
-	padding: 5%;
-	color: white;
+    padding: 2% 5% 5% 5%;
 }
-
 p{
-	font-size: 1vw;
+	font-size: 0.8vw;
 	text-align: justify;
+	font-family: sans-serif;
 }
 h1{
-	font-size: 2vw;
+	width: 66%;
+    margin: auto;
+	background-image: url('../images/titlebackground.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	line-height: 20vh;
+	font-size: 3.5vw;
+	font-family: cinzelregular;
+	color: white;
 }
-h2{
-	font-size: 1.5vw;
-}
-h3{
-	margin: 2vh 0;
+/*h2{
 	font-size: 1.2vw;
+}*/
+h2{
+	margin: 2vh 0;
+	font-size: 1.1vw;
 }
 article>div{
-	height: 35vh;
+	height: auto;
+	display: flex;
+	margin-top: 5%;
 }
 article>div>img{
 	margin: 0 5%;
 	width: 30%;
-	float: right;
+	align-self: center;
+	
 }
-article>div>p{
+article>div>div{
 	width: 60%;
 	float: left;
 }
 table{
-	border: 0.2vw solid white;
 	margin: auto;
+	margin-top: 5%;	
 	width: 60%;
+	border-collapse: collapse;
 }
 th,td{
-	font-size: 1vw;
-	border: 0.2vw solid white;
+	font-size: 0.8vw;
+	border: 0.15vw solid grey;
 
 	padding-left: 2%;
 	padding-right: 2%;
