--- a/css/company.css
+++ b/css/company.css
@@ -64,6 +64,7 @@ p{
 	#company > p:last-child{
 		margin-bottom: 10%;
 	}
+	
 }
 @media only screen and (max-width: 576px) {
 	#company img,#company iframe,#hidetaka img{
@@ -73,6 +74,8 @@ p{
 	#main *{
 		font-size: 3vw;
 	}
-
-
+	#colorChanger{
+		visibility: hidden;
+	}
+	
 }
