--- a/css/company.css
+++ b/css/company.css
@@ -5,24 +5,13 @@
 #CompanyPage{
 	background: linear-gradient(#151515, #151515) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), yellow, #000000) border-box;
 }
-h1{
-	width: 66%;
-    margin: auto;
-	background-image: url('../images/titlebackground.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-	line-height: 20vh;
-	font-size: 3.5vw;
-	font-family: cinzelregular;
-	color: white;
-}
 h2{
 	
 	font-size: 1.5vw;
 }
 p{
 	font-size: 0.75vw;
-	font-family: sans-serif;
+	font-family: sans-serif,serif;
 }
 
 #main{
@@ -70,9 +59,6 @@ p{
 	#company img,#company iframe,#hidetaka img{
 		width: 100%;
 		margin: 2% 0;
-	}
-	#main *{
-		font-size: 3vw;
 	}
 	#colorChanger{
 		visibility: hidden;
